# ChangeLog for dev-util/gtk-doc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.145 2011/01/28 10:25:02 xarthisius Exp $

  28 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gtk-doc-1.15-r2.ebuild:
  Added ~ppc64 wrt #345419

  25 Jan 2011; Jeroen Roovers <jer@gentoo.org> gtk-doc-1.15-r2.ebuild,
  gtk-doc-1.16.ebuild:
  Marked ~hppa (bug #345419).

  23 Jan 2011; Markus Meier <maekke@gentoo.org> gtk-doc-1.15-r2.ebuild:
  arm stable

*gtk-doc-1.16 (17 Jan 2011)

  17 Jan 2011; Pacho Ramos <pacho@gentoo.org> +gtk-doc-1.16.ebuild:
  Version bump with a lot of upstream bugfixes and including some of our
  patches like vim-7.3 fix and highlighter selection.

  01 Jan 2011; Raúl Porcel <armin76@gentoo.org> gtk-doc-1.15-r2.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #348269

  16 Dec 2010; Richard Freeman <rich0@gentoo.org> gtk-doc-1.15-r2.ebuild:
  amd64 stable - 348269

  14 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  gtk-doc-1.15-r2.ebuild:
  stable x86, bug 348269

  28 Nov 2010; Raúl Porcel <armin76@gentoo.org> gtk-doc-1.15-r2.ebuild:
  Add ~alpha/~arm/~ia64/~s390/~sh/~sparc wrt #345419

*gtk-doc-1.15-r2 (14 Nov 2010)

  14 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gtk-doc-1.10-no-m4.patch, -gtk-doc-1.11.ebuild,
  -files/gtk-doc-1.11-fix-index-id-gen.patch,
  -files/gtk-doc-1.11-quote-filenames-with-space.patch,
  -files/gtk-doc-1.11-tests-fixes.patch, -gtk-doc-1.13-r2.ebuild,
  -files/gtk-doc-1.13-fixxref-compat.patch,
  -files/gtk-doc-1.13-scan-touch-module-overrides.patch,
  +gtk-doc-1.15-r2.ebuild,
  +files/gtk-doc-1.15-allow-selection-highlighter.patch, metadata.xml:
  Fix automagic highlighting program detection, bug #334489. Handle
  multi-slot python. Clean up old revisions.

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org> gtk-doc-1.15.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #324077
