@@ -8,6 +8,6 @@ DIST gtk-doc-1.16.tar.bz2 831330 RMD160 d9c3bbe9b86a424bd2d1a6af3f197ec3d14b925e
 EBUILD gtk-doc-1.15-r1.ebuild 2364 RMD160 6ec447fa8c4ff28dd4681af8674030be71aa692e SHA1 b5b47e46b850a6bd2f7927571b2df431636838fa SHA256 fa2c55971bf81a70ef80428b61e07581aba54062b9a6a097c3405d70fe68bfed
 EBUILD gtk-doc-1.15-r2.ebuild 2918 RMD160 7d7c6c20ba0319870788022928c9daac2938bf9b SHA1 3714d54c7d553ad0034abd7783036e15db3efb5e SHA256 a48bf71c8aa8c8a678acb8f4ae50c4388c23471913dcf1bd2ef90774be315332
 EBUILD gtk-doc-1.15.ebuild 2378 RMD160 6ceb7165d045621acdcb3f479e1942775bfaf43e SHA1 67bd719b58278684135ed4b3d53bc0dbec7548b8 SHA256 230815023c10b333a3d7ebdc7e8bfdc7dc367a6ec4bbb7db146c1f94a9427935
-EBUILD gtk-doc-1.16.ebuild 2523 RMD160 7e75aa1987092cae4e15deb0b4075ea8fadb4a2a SHA1 d7d757000d444290c9a234efc3227f8400e05208 SHA256 ff6a79d9a4853c0358fe90bdbd009b565d4e9471c9978f9ce490c9f5fd96be66
-MISC ChangeLog 20723 RMD160 5ff4277263bfd7c55f09b909929e22080539a54a SHA1 996f5bbadaecbb3ddaa76bb48dc2c8d6d1233eba SHA256 87f930da7c8975dc7fcb208f83c79fb7790da524e74383a101792629b51973e0
+EBUILD gtk-doc-1.16.ebuild 2672 RMD160 8a309a562f0628c58d730661f3284e36e5b68e65 SHA1 6747056b4a5e2b756268c0caf47588da3827f347 SHA256 8e77958ec7d425f568781c3c29b3b46e91c7b7c8a23891458ded6fc026451103
+MISC ChangeLog 20836 RMD160 9764e486ec264e72cf4a822c8a66ea22b9c7c6e7 SHA1 8d3f509d4deecbcc73443194305e99772f81b09b SHA256 7e94beed48dbfc3647d2bef25db303a854a093788810c68cbbb840f4731d6caa
 MISC metadata.xml 568 RMD160 5fe3388f9787ccf8fda03317819d95da8758afba SHA1 3fb6c943baad4eec93070b6063b1ba1d8c48cc89 SHA256 351bf17354d07b9bc14055c0092cb0368387437cdf5c1707bdb5120e35419326
