@@ -2,6 +2,6 @@ AUX scons-1.2.0-popen.patch 1826 RMD160 33d195bffbcb2f5280d04c1742f082f82e761bdb
 DIST scons-2.0.1-user.html 820975 RMD160 6ddf70a7ed0403816ae5e1f42f95a71d144770cc SHA1 acfd3d24797d9e5ddde2155158fe6bd2c706f7e7 SHA256 3016ff013d8422bdbb98b39d1810f8c707c59b66ace38d3b81421466053c83b5
 DIST scons-2.0.1-user.pdf 1841747 RMD160 178da2a01782443a497bc158ae7c5a3423ff82dc SHA1 b91906f3446a6b81325af6985eeca27db71db4da SHA256 2fbd518c51d9221cdfba98145c047726960c681233c0802641aeb90fc62450c7
 DIST scons-2.0.1.tar.gz 559293 RMD160 c191a1b49e1b91a5121fb5cac7ccf28379474a8a SHA1 f9183f1b29cb94b48bb3175608831276e60b8fc5 SHA256 0a8151da41c4a26c776c84f44f747ce03e093d43be3e83b38c14a76ab3256762
-EBUILD scons-2.0.1.ebuild 1306 RMD160 5520fcde79a4535b0044f71dbfcfbc3e75a0ffe1 SHA1 7852b963ea91b450065a14bcb3a884950812873d SHA256 5ac114ae1e33caeaf3715cdb79de817f36672c875a69df3a88daf40ec0d48f94
-MISC ChangeLog 5155 RMD160 7cf04a6b0452def901694cac6aef30f17735339e SHA1 5c9ceb29c470da33eb129a6641480386fe90a496 SHA256 f9ee98996a057753768384c375fb684e82904553c6dc03d63d4f9baefa210aaa
+EBUILD scons-2.0.1.ebuild 1381 RMD160 a695bfbac7995d50761c8180993e08d9be744d9c SHA1 b6fd805aa6fe800c881f34f29af54415a0680c27 SHA256 aa7e36b40d0c5e4975bfb2f33d541bf05003191c907986a6670ca8ddcb7223e0
+MISC ChangeLog 5253 RMD160 d193aba98c1a2a5cd35e24b07f69cab830c7a259 SHA1 a69764cac3bc4b7f80e75702f018f97525783ca2 SHA256 3161e7293617cb2a01a5f999f47e3e5e636d54dd6dc3804a14a5da6a4a0d6d9c
 MISC metadata.xml 638 RMD160 313c3b4020d391dd897fb124fd3ae7148e4d25f4 SHA1 2ba17518173dc79962c08f88dc495ade267e443c SHA256 8e7b7a43fc5e94c0c0d538aa07cf5e4b37bc5d9ef688bf8f7870395d2504b7cf
