@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/gtk-doc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.145 2011/01/28 10:25:02 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.146 2011/01/29 16:24:35 grobian Exp $
+
+  29 Jan 2011; Fabian Groffen <grobian@gentoo.org> gtk-doc-1.16.ebuild:
+  Fix for Prefix, transfer Prefix keywords
 
   28 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
   gtk-doc-1.15-r2.ebuild:
